k8s/32-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: servicehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: sandraivanova1/servicehub-backend:latest
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /api/api/test
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/api/test
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 20
