k8s/13-mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: servicehub
spec:
  clusterIP: None
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
